# minimidl

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  justfile  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
docs/: cpp-integration.md  index.md  installation.md  language-reference.md  quickstart.md  swift-integration.md  troubleshooting.md
docs/examples/: basic.md
examples/TaskManager/: CMakeLists.txt  README.md  build.sh  build_c.sh  build_swift.sh
examples/TaskManager/CWrapper/: CMakeLists.txt  taskmanager_test.c  taskmanager_wrapper.cpp  taskmanager_wrapper.h
examples/TaskManager/ExampleApp/: ContentView.swift  TaskManagerExample.xcodeproj.md
examples/TaskManager/TaskManager/: Package.swift  README.md
examples/TaskManager/TaskManager/CWrapper/: CMakeLists.txt  taskmanager_exports.def  taskmanager_wrapper.cpp  taskmanager_wrapper.h
examples/TaskManager/TaskManager/Sources/TaskManager/: TaskManager.swift  Types.swift
examples/TaskManager/TaskManager/Sources/TaskManagerC/: module.modulemap
examples/TaskManager/TaskManager/Tests/TaskManagerTests/: TaskManagerTests.swift
examples/TaskManager/include/: TaskManager.hpp  minimidl_runtime.hpp
examples/TaskManager/src/: example.cpp
examples/TaskManager/tests/: test_main.cpp
examples/task-manager/: README.md  task_manager.idl
minimidl/: __init__.py  __main__.py  cli.py
minimidl/ast/: __init__.py  nodes.py  serialization.py  transformer.py  validator.py
minimidl/generators/: __init__.py  base.py  c_wrapper.py  cpp.py  swift.py
minimidl/generators/templates/: __init__.py
minimidl/generators/templates/c_wrapper/: CMakeLists.txt.j2  exports.def.j2  testbed.c.j2  wrapper.cpp.j2  wrapper.h.j2
minimidl/generators/templates/cpp/: interface.hpp.jinja2  minimidl_runtime.hpp
minimidl/generators/templates/swift/: BasicTests.swift.j2  Package.swift.j2  README.md.j2  Types.swift.j2  module.modulemap.j2  wrapper.swift.j2
minimidl/parser/: __init__.py  grammar.lark  parser.py
minimidl/workflows/: __init__.py  c_workflow.py  cpp_workflow.py  swift_workflow.py
prompts/: minimidl_task_prompts.md  minimidl_vision_prompt.md
tests/: __init__.py
tests/fixtures/: basic.idl  complete.idl  edge_cases.idl  multiple_namespaces.idl
tests/integration/: __init__.py  test_cli_workflows.py
tests/unit/: __init__.py  test_ast.py  test_c_wrapper_generator.py  test_cli.py  test_coverage_boost.py  test_cpp_generator.py  test_final_coverage.py  test_generators_coverage.py  test_parser.py  test_parser_coverage.py  test_serialization.py  test_simple_coverage.py  test_swift_generator.py  test_transformer.py  test_validation.py  test_workflows.py
